[package]
name = "tui_todo_project"
version = "0.1.0"
authors = ["TheCarton <theukearchy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = {version = "0.28.1", features = ["widget-calendar"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
time = {version = "0.3.36", features = ["macros", "local-offset", "serde"]}
